<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/carlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/tripDetails_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="visible">


            <View
                android:id="@+id/trip_view"
                android:layout_width="wrap_content"
                android:layout_height="0.1dp"
                android:layout_below="@+id/tool_lay"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/invite_gray"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/tripinprogress_lay"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/speed_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textColor="@color/btnaccept" />

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00km/hr" />
                </LinearLayout>

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/invite_gray" />

                <LinearLayout
                    android:id="@+id/waiting_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wait_time"
                        android:textColor="@color/btnaccept" />

                    <TextView
                        android:id="@+id/idle_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:00:00" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:id="@+id/view_line_trip"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/view_tool"
            android:foreground="@drawable/background_shadow_light"
            android:visibility="visible">
            <!--    YOUR STUFF HERE -->
        </FrameLayout>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/currentLocationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:paddingRight="10dp"
        android:src="@drawable/current_loc"
        android:visibility="visible"
        app:backgroundTint="@android:color/white"
        app:layout_anchorGravity="top|right|end" />

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/trip_started_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="false"
        android:focusable="false"
        android:background="@color/semi_transparent"
        android:visibility="visible">


        <LinearLayout
            android:id="@+id/design_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/distance_travelled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:text="-"
                        android:textColor="@color/transparent_bg_text"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/transparent_bg_text_head"
                        android:text="@string/distance_travelled"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/linebottom_light" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_travelled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0.0 m"
                        android:textColor="@color/transparent_bg_text"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/transparent_bg_text_head"
                        android:text="@string/time_travelled"
                        android:textSize="12sp" />
                </LinearLayout>


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/linebottom_light" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/estimate_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:text="-"
                        android:textColor="@color/transparent_bg_text"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/transparent_bg_text_head"
                        android:text="@string/estimated_arrival"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/fare_details"
                android:textColor="@color/textviewcolor_light"
                android:textSize="16sp"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/min_fare"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="0 Mins"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/minimum_fare"
                        android:textColor="@color/textviewcolor_light"
                        android:textSize="11sp" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/linebottom_dark" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/below_miles_val"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="5PPL"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/below_miles_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Below 25 mi."
                        android:textColor="@color/textviewcolor_light"
                        android:textSize="11sp" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/linebottom_dark" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/above_miles_val"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="$10"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/above_miles_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="max_size"
                        android:textColor="@color/textviewcolor_light"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>



</RelativeLayout>